--- a/nowstagram/nowstagram/static/styles/pages/index.css
+++ b/nowstagram/nowstagram/static/styles/pages/index.css
@@ -138,3 +138,16 @@
     border: none;
     width: 484px;
 }
+.more-content {
+    margin: 50px auto 20px;
+    height: 30px;
+    width: 100%;
+    text-align: center;
+    line-height: 25px;
+
+    border: 3px solid #3897f0;
+}
+.more-content a {
+    color: #333;
+    font-size: 20px;
+}
