--- a/nowstagram/nowstagram/templates/index.html
+++ b/nowstagram/nowstagram/templates/index.html
@@ -85,6 +85,11 @@
         </div>
     </article>
     {% endfor %}
+    {% if has_next %}
+        <div class="more-content js-load-more">
+            <a class="_oidfu" href="javascript:void(0);">更多</a>
+        </div>
+    {% endif %}
     <!--
     <article class="mod">
         <header class="mod-hd">
@@ -349,5 +354,12 @@
     -->
 </div>
 {% endblock %}
+{% block js %}
+<script type="text/javascript">
+    window.uid = {{id}};
+</script>
+<script type="text/javascript" src="/static/js/jquery.js"></script>
+<script type="text/javascript" src="/static/js/index.js"></script>
+{% endblock%}
 
 
