--- a/nowstagram/nowstagram/static/styles/pages/index.css
+++ b/nowstagram/nowstagram/static/styles/pages/index.css
@@ -145,9 +145,9 @@
     text-align: center;
     line-height: 25px;
 
-    border: 3px solid #3897f0;
+    border: 2px solid #3897f0;
 }
 .more-content a {
-    color: #333;
+    color: #3897f0;
     font-size: 20px;
 }
