--- a/nowstagram/nowstagram/templates/index.html
+++ b/nowstagram/nowstagram/templates/index.html
@@ -2,7 +2,7 @@
 {% block title %}首页-{{current_user.username}}{% endblock %}
 {% block css %}/static/styles/pages/index.css{% endblock %}
 {% block content %}
-<div class="page-main clearfix">
+<div class="page-main clearfix js-image-list" >
     {% for image in images %}
     <article class="mod">
         <header class="mod-hd">
@@ -156,207 +156,12 @@
             </section>
         </div>
     </article>
-    <article class="mod">
-        <header class="mod-hd">
-            <time class="time">2 周</time>
-            <a href="#" class="avatar">
-                <img src="http://images.nowcoder.com/images/20141231/622873_1420036789276_622873_1420036771761_%E8%98%91%E8%8F%87.jpg@0e_100w_100h_0c_1i_1o_90Q_1x">
-            </a>
-            <div class="profile-info">
-                <a title="蘑菇喵" href="/mogu/">蘑菇喵</a>
-            </div>
-        </header>
-        <div class="mod-bd">
-            <div class="img-box">
-                <img src="../images/res/cat.jpg">
-            </div>
-        </div>
-        <div class="mod-ft">
-            <section class="times">
-                <span></span>
-                <span>6.2百万</span>
-                <span> 次播放</span>
-            </section>
-            <ul class="discuss-list">
-                <li>
-                    <h1>
-                        <a>toutvadisparaitre</a>
-                        <span data-reactid=".0.1.0.0.0.2.1.0.0.1">
-                            <span data-reactid=".0.1.0.0.0.2.1.0.0.1.0">和朋友吐一吐是解忧最佳</span>
-                        </span>
-                    </h1>
-                </li>
-                <li>
-                    <a>scottiecosmos</a>
-                    <span>
-                        <span>That's what i call "awesomeness"</span>
-                    </span>
-                </li>
-                <li class="more-discuss">
-                    <a>
-                        <span>全部 </span><span class="">10,883</span>
-                        <span> 条评论</span></a>
-                </li>
-                <li>
-                    <a class=" icon-remove" title="删除评论"></a>
-                    <a class="_4zhc5 _iqaka" title="zjuyxy" href="/zjuyxy/" data-reactid=".0.1.0.0.0.2.1.2:$comment-17856951190001917.1">zjuyxy</a>
-                    <span>
-                        <span>test</span>
-                    </span>
-                </li>
-                <li>
-                    <a class="icon-remove" title="删除评论"></a>
-                    <a>zjuyxy</a>
-                    <span>
-                        <span>test test test test test testtest test test test test testtest test test test test test</span>
-                    </span>
-                </li>
-            </ul>
-            <section class="discuss-edit">
-                <a class="icon-heart"></a>
-                <form>
-                    <input placeholder="添加评论..." type="text">
-                </form>
-                <button class="more-info">更多选项</button>
-            </section>
-        </div>
-    </article>
-    <article class="mod">
-        <header class="mod-hd">
-            <time class="time">2 周</time>
-            <a href="#" class="avatar">
-                <img src="http://images.nowcoder.com/images/20141231/622873_1420036789276_622873_1420036771761_%E8%98%91%E8%8F%87.jpg@0e_100w_100h_0c_1i_1o_90Q_1x">
-            </a>
-            <div class="profile-info">
-                <a title="蘑菇喵" href="/mogu/">蘑菇喵</a>
-            </div>
-        </header>
-        <div class="mod-bd">
-            <div class="img-box">
-                <img src="../images/res/cat.jpg">
-            </div>
-        </div>
-        <div class="mod-ft">
-            <section class="times">
-                <span></span>
-                <span>6.2百万</span>
-                <span> 次播放</span>
-            </section>
-            <ul class="discuss-list">
-                <li>
-                    <h1>
-                        <a>toutvadisparaitre</a>
-                        <span data-reactid=".0.1.0.0.0.2.1.0.0.1">
-                            <span data-reactid=".0.1.0.0.0.2.1.0.0.1.0">和朋友吐一吐是解忧最佳</span>
-                        </span>
-                    </h1>
-                </li>
-                <li>
-                    <a>scottiecosmos</a>
-                    <span>
-                        <span>That's what i call "awesomeness"</span>
-                    </span>
-                </li>
-                <li class="more-discuss">
-                    <a>
-                        <span>全部 </span><span class="">10,883</span>
-                        <span> 条评论</span></a>
-                </li>
-                <li>
-                    <a class=" icon-remove" title="删除评论"></a>
-                    <a class="_4zhc5 _iqaka" title="zjuyxy" href="/zjuyxy/" data-reactid=".0.1.0.0.0.2.1.2:$comment-17856951190001917.1">zjuyxy</a>
-                    <span>
-                        <span>test</span>
-                    </span>
-                </li>
-                <li>
-                    <a class="icon-remove" title="删除评论"></a>
-                    <a>zjuyxy</a>
-                    <span>
-                        <span>test test test test test testtest test test test test testtest test test test test test</span>
-                    </span>
-                </li>
-            </ul>
-            <section class="discuss-edit">
-                <a class="icon-heart-empty"></a>
-                <form>
-                    <input placeholder="添加评论..." type="text">
-                </form>
-                <button class="more-info">更多选项</button>
-            </section>
-        </div>
-    </article>
-    <article class="mod">
-        <header class="mod-hd">
-            <time class="time">2 周</time>
-            <a href="#" class="avatar">
-                <img src="http://images.nowcoder.com/images/20141231/622873_1420036789276_622873_1420036771761_%E8%98%91%E8%8F%87.jpg@0e_100w_100h_0c_1i_1o_90Q_1x">
-            </a>
-            <div class="profile-info">
-                <a title="蘑菇喵" href="/mogu/">蘑菇喵</a>
-            </div>
-        </header>
-        <div class="mod-bd">
-            <div class="img-box">
-                <img src="../images/res/cat.jpg">
-            </div>
-        </div>
-        <div class="mod-ft">
-            <section class="times">
-                <span></span>
-                <span>6.2百万</span>
-                <span> 次播放</span>
-            </section>
-            <ul class="discuss-list">
-                <li>
-                    <h1>
-                        <a>toutvadisparaitre</a>
-                        <span data-reactid=".0.1.0.0.0.2.1.0.0.1">
-                            <span data-reactid=".0.1.0.0.0.2.1.0.0.1.0">和朋友吐一吐是解忧最佳</span>
-                        </span>
-                    </h1>
-                </li>
-                <li>
-                    <a>scottiecosmos</a>
-                    <span>
-                        <span>That's what i call "awesomeness"</span>
-                    </span>
-                </li>
-                <li class="more-discuss">
-                    <a>
-                        <span>全部 </span><span class="">10,883</span>
-                        <span> 条评论</span></a>
-                </li>
-                <li>
-                    <a class=" icon-remove" title="删除评论"></a>
-                    <a class="_4zhc5 _iqaka" title="zjuyxy" href="/zjuyxy/" data-reactid=".0.1.0.0.0.2.1.2:$comment-17856951190001917.1">zjuyxy</a>
-                    <span>
-                        <span>test</span>
-                    </span>
-                </li>
-                <li>
-                    <a class="icon-remove" title="删除评论"></a>
-                    <a>zjuyxy</a>
-                    <span>
-                        <span>test test test test test testtest test test test test testtest test test test test test</span>
-                    </span>
-                </li>
-            </ul>
-            <section class="discuss-edit">
-                <a class="icon-heart-empty"></a>
-                <form>
-                    <input placeholder="添加评论..." type="text">
-                </form>
-                <button class="more-info">更多选项</button>
-            </section>
-        </div>
-    </article>
     -->
 </div>
 {% endblock %}
 {% block js %}
 <script type="text/javascript">
-    window.uid = {{id}};
+    window.uid = None;
 </script>
 <script type="text/javascript" src="/static/js/jquery.js"></script>
 <script type="text/javascript" src="/static/js/index.js"></script>
