--- a/nowstagram/nowstagram/static/styles/pages/index.css
+++ b/nowstagram/nowstagram/static/styles/pages/index.css
@@ -139,12 +139,12 @@
     width: 484px;
 }
 .more-content {
-    margin: 50px auto 20px;
-    height: 30px;
-    width: 100%;
+    margin: -50px auto 20px;
+    height: 80px;
+    width: 80px;
     text-align: center;
-    line-height: 25px;
-
+    line-height: 80px;
+    border-radius: 50%;
     border: 2px solid #3897f0;
 }
 .more-content a {
