index-js-load-more

--- a/nowstagram/nowstagram/templates/index.html
+++ b/nowstagram/nowstagram/templates/index.html
@@ -41,6 +41,7 @@
                     {%endfor%}
                 </ul>
                 <section class="discuss-edit">
+                    <a class="icon-heart"></a>
                     <form>
                         <input placeholder="添加评论..." type="text">
                     </form>
