--- a/nowstagram/nowstagram/templates/base.html
+++ b/nowstagram/nowstagram/templates/base.html
@@ -12,13 +12,24 @@
     <div class="container">
         <section>
             <header class="header">
+
                 <div class="header-cont">
+
                     <a class="logo" href="/">logo</a>
+                    {% if current_user.is_authenticated %}
+                    <font face="宋体" color="blue" size="20px"> {{current_user.username}} 欢迎您！</font>
+                    {% else %}
+                    <font face="宋体" color="blue" size="20px"> 欢迎访问！</font>
+                    {% endif %}
                     <div class="web-menu">
                         {% if current_user.is_authenticated %}
                         <a class="profile-ico" href="/profile/{{current_user.id}}">{{current_user.username}}</a>
+                        <div class="log-in-out" style="float:right">
+                            <a href="/logout/"><input type="button"value="退出"></a>
+                        </div>
                         {% else %}
                         <a class="profile-ico" href="/regloginpage/">登录/注册</a>
+                        <a class="profile-reg" href="/regloginpage/"><input type="button" value="注册"></a>
                         {% endif %}
                     </div>
                 </div>
