--- a/nowstagram/nowstagram/templates/base.html
+++ b/nowstagram/nowstagram/templates/base.html
@@ -16,11 +16,11 @@
                 <div class="header-cont">
 
                     <a class="logo" href="/">logo</a>
-                    {% if current_user.is_authenticated %}
+                    <!--{% if current_user.is_authenticated %}
                     <font face="楷体" color="blue" size="10"  > {{current_user.username}} 欢迎您！</font>
                     {% else %}
                     <font face="楷体" color="#00bfff" size="10" > 欢迎！</font>
-                    {% endif %}
+                    {% endif %}-->
                     <div class="web-menu">
                         {% if current_user.is_authenticated %}
                         <a class="profile-ico" href="/profile/{{current_user.id}}">{{current_user.username}}</a>
