--- a/nowstagram/nowstagram/templates/index.html
+++ b/nowstagram/nowstagram/templates/index.html
@@ -30,6 +30,7 @@
                             <span> 条评论</span></a>
                     </li>
                     {% for comment in image.comments: %}
+                    {% if loop.index > 2 %}{% break %} {% endif %}
                     <li>
                         <!-- <a class=" icon-remove" title="删除评论"></a> -->
                         <a class="_4zhc5 _iqaka" title="{{comment.user.username}}" href="/profile/{{comment.user_id}}" data-reactid=".0.1.0.0.0.2.1.2:$comment-17856951190001917.1">{{comment.user.username}}</a>
@@ -42,9 +43,9 @@
                 <section class="discuss-edit">
                     <a class="icon-heart"></a>
                     <form>
-                        <input placeholder="添加评论..." type="text">
+                        <input placeholder="添加评论..." id="jsCmt"  type="text">
                     </form>
-                    <button class="more-info">提交</button>
+                    <button class="more-info" id="jsSubmit">提交</button>
                 </section>
             </div>
         </article>
@@ -59,7 +60,7 @@
 {% endblock%}
 {% block js %}
 <script type="text/javascript">
-    window.uid = None;
+    window.uid = null;
 </script>
 <script type="text/javascript" src="/static/js/jquery.js"></script>
 <script type="text/javascript" src="/static/js/index.js"></script>
