direct_login if having login

--- a/nowstagram/nowstagram/templates/base.html
+++ b/nowstagram/nowstagram/templates/base.html
@@ -30,6 +30,7 @@
                         {% else %}
                         <a class="profile-ico" href="/regloginpage/">登录/注册</a>
                         <a class="profile-reg" href="/regloginpage/"><input type="button" value="注册"></a>
+                        <a class="profile-reg" href="/loginpage/"><input type="button" value="登陆"></a>
                         {% endif %}
                     </div>
                 </div>
