--- a/nowstagram/nowstagram/templates/direct_login.html
+++ b/nowstagram/nowstagram/templates/direct_login.html
@@ -5,7 +5,7 @@
 <main class="main login-main" role="main">
     <article class="login-cont clearfix">
         <div class="login-pic-box">
-            <img src="/static/images/res/scenery1.jpg">
+            <img src="/static/images/res/scenery2.jpg">
         </div>
         <div class="login-wrapper">
             <div class="login-box">
@@ -14,22 +14,19 @@
                         {% if (msg | length) > 0 %}
                         <b>{{msg}}</b>
                         {% else %}
-                        注册 网站
+                        欢迎 登陆
                         {% endif %}
                     </h2>
                     <div class="form-item">
-                        <input class="input-txt"  aria-label="用户名" aria-required="true" autocapitalize="off" autocorrect="off" maxlength="30" name="username" placeholder="6至15位用户名" value="" type="text" data-reactid=".0.1.0.1.0.1.0.5.0">
-                    </div>
-                     <div class="form-item">
-                        <input class="input-txt"  aria-label="邮箱" aria-required="true" autocapitalize="off" autocorrect="off" maxlength="30" name="usermail" placeholder="请输入QQ邮箱" value="" type="text" data-reactid=".0.1.0.1.0.1.0.7.0">
+                        <input class="input-txt"  aria-label="用户名" aria-required="true" autocapitalize="off" autocorrect="off" maxlength="30" name="username" placeholder="用户名" value="" type="text" data-reactid=".0.1.0.1.0.1.0.5.0">
                     </div>
                     <div class="form-item">
                         <input class="input-txt" aria-describedby="" aria-label="密码" aria-required="true" autocapitalize="off" autocorrect="off" name="password" placeholder="密码" type="password" value="" data-reactid=".0.1.0.1.0.1.0.6.0">
                     </div>
                     <input type="hidden" name="next" value="{{next}}"/>
                     <div class="btn-wrapper">
-                        <button class="btn-primary" onclick="form=document.getElementById('regloginform');form.action='/reg/';">注册</button>
-                        <!--<button class="btn-primary" onclick="form=document.getElementById('regloginform');form.action='/login/';">登录</button>-->
+                        <!--<button class="btn-primary" onclick="form=document.getElementById('regloginform');form.action='/reg/';">注册</button>-->
+                        <button class="btn-primary" onclick="form=document.getElementById('regloginform');form.action='/login/';">登录</button>
                     </div>
                     <p class="agreenment">
                         <span>注册即表示你同意我们的 </span>
